# ndx-anatomical-localization

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  NEXTSTEPS.md  README.md  pyproject.toml
.github/workflows/: run_all_tests.yml  run_coverage.yml
docs/source/: conf.py  conf_doc_autogen.py  format.rst  index.rst
notebooks/: example.ipynb
spec/: ndx-anatomical-localization.extensions.yaml  ndx-anatomical-localization.namespace.yaml
src/pynwb/ndx_anatomical_localization/: __init__.py  ndx_anatomical_localization.py
src/pynwb/ndx_anatomical_localization/widgets/: __init__.py  tetrode_series_widget.py
src/pynwb/tests/: test_anatomical_coordinates.py  test_tetrodeseries.py
src/spec/: create_extension_spec.py
