[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ndx-anatomical-localization"
version = "0.1.0"
authors = [
    { name="Heberto Mayorquin" },
    { name="Alessandra Trapani" },
    { name="Szonja Weigl" },
    { name="Stephanie Prince" },
    { name="Ben Dichter", email="ben.dichter@catalystneuro.com" },
]
description = "Provide localization of objects (e.g. electrodes) against a reference image (e.g. CCF)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
]
keywords = [
    'NeurodataWithoutBorders',
    'NWB',
    'nwb-extension',
    'ndx-extension',
]
dependencies = [
    "pynwb>=3.1.3",
    "hdmf>=4.2.0",
]

[project.urls]
"Homepage" = "https://github.com/catalystneuro/ndx-anatomical-localization"
# "Documentation" = "https://package.readthedocs.io/"
# "Bug Tracker" = "https://github.com/organization/package/issues"
# "Discussions" = "https://github.com/organization/package/discussions"
# "Changelog" = "https://github.com/organization/package/blob/main/CHANGELOG.md"

[tool.hatch.build]
include = [
    "src/pynwb",
    "spec/ndx-anatomical-localization.extensions.yaml",
    "spec/ndx-anatomical-localization.namespace.yaml",
]
exclude = [
    "src/pynwb/tests",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/pynwb/ndx_anatomical_localization",
    "spec"
]

[tool.hatch.build.targets.wheel.sources]
"spec" = "ndx_anatomical_localization/spec"

[tool.hatch.build.targets.sdist]
include = [
    "src/pynwb",
    "spec/ndx-anatomical-localization.extensions.yaml",
    "spec/ndx-anatomical-localization.namespace.yaml",
    "docs",
]
exclude = []

[tool.pytest.ini_options]
# uncomment below to run pytest always with code coverage reporting. NOTE: breakpoints may not work
# addopts = "--cov --cov-report html"

[tool.codespell]
skip = "htmlcov,.git,.mypy_cache,.pytest_cache,.coverage,*.pdf,*.svg,venvs,.tox,hdmf-common-schema,./docs/_build/*,*.ipynb"
ignore-words-list = "mebrains"

[tool.coverage.run]
branch = true
source = ["ndx_anatomical_localization"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract"
]

[tool.black]
line-length = 120
preview = true
exclude = ".git|.mypy_cache|.tox|.venv|venv|.ipynb_checkpoints|_build/|dist/|__pypackages__|.ipynb|docs/"

[tool.ruff]
line-length = 120
exclude = [
  ".git",
  ".tox",
  "__pycache__",
  "build/",
  "dist/",
  "docs/source/conf.py",
]

[tool.ruff.lint]
select = [
    "F",     # pyflakes: unused imports, undefined names, redefined variables, star imports
    "I",     # isort: import sorting and grouping
    "T100",  # flake8-debugger: leftover breakpoint() or pdb imports
    "T201",  # flake8-print: leftover print() calls
    "T203",  # flake8-print: leftover pprint() calls
    "UP",    # pyupgrade: modernize syntax to match requires-python (e.g. type unions, f-strings, super())
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"src/pynwb/ndx_anatomical_localization/__init__.py" = ["E402", "F401"]
"src/spec/create_extension_spec.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["ndx_anatomical_localization"]

[dependency-groups]
test = [
    "codespell>=2.3",
    "coverage>=7.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-subtests>=0.12",
    "ruff>=0.15",
]

dev = [
    {include-group = "test"},
    "pre-commit",
]
